[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongo-to-s3"
version = "0.0.9"
dependencies = [
    "boto3",
]
authors = [
  { name="S M Mahmudul Hasan", email="thegeek@iamlizu.com" },
]
description = "Automated script generator to backup MongoDB databases to Amazon S3."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/IamLizu/mongo-to-s3"
"Bug Tracker" = "https://github.com/IamLizu/mongo-to-s3/issues"

[project.scripts]
mongo-to-s3 = "mongo_to_s3.mongo_to_s3:main"